# python-template-opkoko19.2

./: README.md  cookiecutter.json
{{cookiecutter.module_name}}/: README.md  pylintrc  pyproject.toml
{{cookiecutter.module_name}}/tests/: test_{{cookiecutter.module_name}}.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: __init__.py  cli.py  {{cookiecutter.module_name}}.py
